--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
         /* Add a responsive layout for the container */
+        @media only screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+}
         .container {
             width: 70%;
             padding-right: 50px;
