--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
         /* Add a responsive layout for the container */
-        @media only screen and (max-width: 600px) {
+ @media (max-width: 768px) {
     .container {
         width: 100%;
-        padding: 0;
-        margin: 0;
     }
 }
         .container {
